--- a/src/components/play.css
+++ b/src/components/play.css
@@ -11,9 +11,9 @@
     cursor: pointer;
     border-style: solid;
     border-width: 1.156em 0 1.156em 1.875em;
-    top: 0px;
-    left: 0px;
-    margin-bottom: 1em;
+    top: 1em;
+    margin-bottom: -1em;
+    margin-top: 2em;
 }
 
 .playButton:hover {
