--- a/src/components/bpm.style.css
+++ b/src/components/bpm.style.css
@@ -5,10 +5,11 @@
     color: white;
     padding: 1em;
     border-radius: 10px;
-    width: 5em;
+    width: 4em;
     display: inline-block;
-    top: 5px;
-    margin-right: 2em;
+    top: 4px;
+    margin-bottom: 10px;
+    
 }
 
 .bpm-container {
