--- a/src/sketches/metronome.css
+++ b/src/sketches/metronome.css
@@ -12,15 +12,15 @@
     border-style: solid;
     border-width: 1.156em 0 1.156em 1.875em;
     top: 1em;
-    margin-bottom: -1em;
-    margin-top: 2em;
+    margin-bottom: 1em;
+    margin-top: 1em;
 }
 
 .playButton:hover {
     border-color: transparent transparent transparent rgb(14, 66, 73);
 }
 
-.pauseButton {
+.stopButton {
     border-style: double;
     border-width: 0 0 0 1.875em;
     border-color: transparent transparent transparent #2AC7DC;
