--- a/src/components/play_button/play.css
+++ b/src/components/play_button/play.css
@@ -12,8 +12,8 @@
     border-style: solid;
     border-width: 1.156em 0 1.156em 1.875em;
     margin-top: 1em;
-    margin-bottom: 3em;
-    margin-left: 4.9em;
+    margin-bottom: 1em;
+    margin-left: 4.7em;
     
 }
 
@@ -24,5 +24,5 @@
 .pauseButton {
     border-style: double;
     border-width: 0 0 0 1.875em;
-    border-color: transparent transparent transparent #2AC7DC;
+    border-color: transparent transparent transparent #6A5ACD;
 }
