--- a/src/components/metro_button/metro.css
+++ b/src/components/metro_button/metro.css
@@ -11,7 +11,7 @@
     border-style: solid;
     border-width: 1.2em 1.2em 1.2em 1.2em;
     margin-top: 1em;
-    margin-bottom: 1em;
+    margin-bottom: 0;
     margin-left: 4.4em;
     border-radius: 50%;
     
