--- a/src/components/mode-selection/mode-selection.component.scss
+++ b/src/components/mode-selection/mode-selection.component.scss
@@ -6,10 +6,30 @@
   bottom: 0;
   display: flex;
   flex-direction: column;
-  background-color: white;
-  z-index: 100;
   justify-content: center;
   align-items: center;
+
+  .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url(../../img/background.png);
+    background-size: cover;
+    z-index: 10;
+    opacity: .4;
+  }
+
+  .content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    z-index: 100;
+  }
 
   .alert {
     max-width: 40vw;
