--- a/src/components/metro_button/metro.css
+++ b/src/components/metro_button/metro.css
@@ -12,7 +12,8 @@
     border-width: 1.2em 1.2em 1.2em 1.2em;
     margin-top: 1em;
     margin-bottom: 0;
-    margin-left: 4.4em;
+    margin-left: 1em;
+    margin-right: 1em;
     border-radius: 50%;
     
 }
@@ -35,6 +36,7 @@
     border-width: 1.3em 1.3em 1.3em 1.3em;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 4.3em;
+    margin-left: 1em;
+    margin-right: 1em;
     border-radius: 50%;
 }
