--- a/src/components/play_button/play.css
+++ b/src/components/play_button/play.css
@@ -12,8 +12,9 @@
     border-style: solid;
     border-width: 1.156em 0 1.156em 1.875em;
     margin-top: 1em;
-    margin-bottom: 1em;
-    margin-left: 4.7em;
+    margin-bottom: 0em;
+    margin-left: 1.2em;
+    margin-right: 1em;
     
 }
 
